# oliveyoung_scraper

./: .env.example  README.md  creait.db  db_to_dataframe_ex.py  main.py  pyproject.toml  review_scraper_ex.py
src/: database.py
src/scraper/: __init__.py  oliveyoung_scraper.py
